@@ -2,6 +2,7 @@ Version Next
 
     - Put back UpdatingDataSource which got accidentally lost in r205
     - Fixed bug in SQLSchemaUpdater detecting initialized database
+    - Added HardLink class
 
 Version 1.0.263 Released Jan 30, 2012
 
